# docbug

./: README.md  docbug.cabal
src/: SomeLib.hs
tests/: doctests.hs
